tests/codegen/fail/020-more-than-8-args-int.hyg
// Wrong number of arguments (missing argument)
fun tenArgs(x1: int, x2: int, x3: int, x4: int, x5: int, x6: int, x7: int, x8: int, x9: int, x10: int): int = x1 + x10;

// Error: Expected 10 arguments but got 9
let result1 = tenArgs(1, 2, 3, 4, 5, 6, 7, 8, 9);
assert(result1);
